--- a/Practical1/Practical1.vcxproj.filters
+++ b/Practical1/Practical1.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="PlayerController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="mapTile.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="JuenWindow.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PlayerController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="mapTile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
