--- a/Practical1/Practical1.vcxproj
+++ b/Practical1/Practical1.vcxproj
@@ -129,7 +129,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bullet.cpp" />
+    <ClCompile Include="bulletPoolManager.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="mapTile.cpp" />
     <ClCompile Include="GameStateManager.cpp" />
     <ClCompile Include="JuenGraphics.cpp" />
@@ -142,7 +145,10 @@
     <ClCompile Include="Scene2.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bullet.h" />
+    <ClInclude Include="bulletPoolManager.h" />
     <ClInclude Include="CollisionManager.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="mapTile.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="GameStateManager.h" />
