--- a/Practical1/Practical1.vcxproj
+++ b/Practical1/Practical1.vcxproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <ClCompile Include="bullet.cpp" />
     <ClCompile Include="bulletPoolManager.cpp" />
+    <ClCompile Include="Button.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="MainMenu.cpp" />
@@ -148,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="bullet.h" />
     <ClInclude Include="bulletPoolManager.h" />
+    <ClInclude Include="Button.h" />
     <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="MainMenu.h" />
